"日期：2020-08-20   内容：课后作业登录、注册、分页、dashboard"

--- a/spring_boot/src/main/resources/templates/indexSimple.html
+++ b/spring_boot/src/main/resources/templates/indexSimple.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
-    <title>登录</title>
+    <title>登录/注册</title>
     <!--引入css-->
     <!-- <link th:href="@{http://cdn.bootcss.com/bootstrap/3.3.0/css/bootstrap.min.css}" rel="stylesheet" > -->
     <!-- <link th:href="${'/css/sbDemo.css'}" rel="stylesheet" /> -->
