--- a/spring_boot/src/main/resources/templates/fragments/sidebar.html
+++ b/spring_boot/src/main/resources/templates/fragments/sidebar.html
@@ -25,20 +25,20 @@
             <div class="menu_section">
                 <h3>General</h3>
                 <ul class="nav side-menu">
-                    <li><a href="/common/dashboard">Dashboard</a></li>
-                    <li><a href="/common/dashboard2">Dashboard2</a></li>
+                    <li shiro:hasAnyRoles="管理员,干部,员工"><a href="/common/dashboard">Dashboard</a></li>
+                    <li shiro:hasAnyRoles="管理员,干部,员工"><a href="/common/dashboard2">Dashboard2</a></li>
                     <li><a><i class="fa fa-edit"></i> 用户 <span class="fa fa-chevron-down"></span></a>
                         <ul class="nav child_menu">
-                            <li><a href="/account/profile">Profile</a></li>
-                            <li><a href="/account/users">Users</a></li>
-                            <li><a href="index2.html">Roles</a></li>
-                            <li><a href="index3.html">Resources</a></li>
+                            <li shiro:hasAnyRoles="管理员,干部,员工"><a href="/account/profile">Profile</a></li>
+                            <li shiro:hasAnyRoles="管理员,干部"><a href="/account/users">Users</a></li>
+                            <li shiro:hasAnyRoles="管理员,干部"><a href="index2.html">Roles</a></li>
+                            <li shiro:hasAnyRoles="管理员,干部"><a href="index3.html">Resources</a></li>
                         </ul>
                     </li>
                     <li><a><i class="fa fa-wrench"></i> Test <span class="fa fa-chevron-down"></span></a>
                         <ul class="nav child_menu">
-                            <li><a href="/test/index">Index</a></li>
-                            <li><a>Level One<span class="fa fa-chevron-down"></span></a>
+                            <li shiro:hasAnyRoles="管理员,干部,员工"><a href="/test/index">Index</a></li>
+                            <li shiro:hasAnyRoles="管理员,干部,员工"><a>Level One<span class="fa fa-chevron-down"></span></a>
                                 <ul class="nav child_menu">
                                     <li class="sub_menu"><a href="level2.html">Level Two</a>
                                     </li>
